[package]
name = "minesweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "DomRect", "TouchEvent", "TouchList", "Touch"] }

[lib]
crate-type = ["cdylib"]